# Engine

./: '  .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  2  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  global_timetrack.csv  manage.py  mkdocs.yml  mypy.ini  pymmdt_env.yml  pyproject.toml  setup.cfg  setup.py
.dvc/: config
.github/CONTRIBUTING/: chimerapy_env.yml
.github/ISSUE_TEMPLATES/: bug_report.md
.github/workflows/: README.md  build.yml  build_and_deploy.yml  changelog.yml  coverage.yml  deploy.yml  doc.yml  docs.yml  test.yml  tests.yml
chimerapy/: __init__.py  __version__.py  _debug.py  _logger.py  api.py  base_actor.py  base_process.py  chimerapyrc.yaml  client.py  communication.py  config.py  data_handlers.py  enums.py  graph.py  loader.py  logger.py  logreceiver.py  manager.py  node.py  registered_methods.py  runner.py  server.py  service.py  socket_handling.py  sorter.py  states.py  utils.py  worker.py
chimerapy/app/: main.py  main.pyproject  main.pyproject.user.100eacb  main.pyproject.user.18eb06e
chimerapy/core/: __init__.py  collector.py  data_chunk.py  data_source.py  data_stream.py  entry.py  pipeline.py  process.py  queue.py  reader.py  session.py  sorter.py  tools.py  writer.py
chimerapy/dashboard/: README.md  dummy_log_server.py  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
chimerapy/engine/: __init__.py  _debug.py  _logger.py  _loop.py  async_timer.py  chimerapyrc.yaml  clock.py  config.py  data_protocols.py  eventbus.py  exceptions.py  graph.py  service.py  states.py  utils.py  version.py
chimerapy/entry/: __init__.py  worker.py
chimerapy/lifecycle/: __init__.py  config.py  fsm.py  lifecycle.json
chimerapy/logger/: common.py  distributed_logs_sink.py  portable_queue.py  queued_handler.py  utils.py  zmq_handlers.py
chimerapy/manager/: distributed_logging_service.py  http_server_service.py  manager.py  manager_services_group.py  session_record_service.py  worker_handler_service.py  zeroconf_service.py
chimerapy/networking/: __init__.py  async_loop_thread.py  client.py  data_chunk.py  enums.py  publisher.py  server.py  subscriber.py  utils.py
chimerapy/node/: __init__.py  node.py  node_config.py  node_service.py  poller_service.py  processor_service.py  publisher_service.py  record_service.py  worker_comms_service.py  worker_service.py
chimerapy/records/: __init__.py  audio_record.py  image_record.py  record.py  tabular_record.py  video_record.py
chimerapy/utils/: __init__.py  memory_manager.py  tobii.py  tools.py
chimerapy/worker/: __init__.py  http_client_service.py  http_server.py  http_server_service.py  manager_client_service.py  manager_listener.py  node_handler_service.py  worker.py  worker_service.py  worker_services_group.py  zeroconf_listener.py
chimerapy_engine/: __version__.py  _debug.py  _logger.py  graph.py  utils.py
chimerapy_engine/entry/: worker.py
chimerapy_engine/logger/: zmq_handlers.py
chimerapy_engine/manager/: __init__.py  distributed_logging_service.py  http_server_service.py  manager.py  manager_service.py  manager_services_group.py  worker_handler_service.py  zeroconf_service.py
chimerapy_engine/networking/: async_loop_thread.py  client.py  data_chunk.py  publisher.py  server.py  subscriber.py
chimerapy_engine/node/: node.py  record_service.py
chimerapy_engine/records/: audio_record.py
chimerapy_engine/worker/: http_client_service.py  http_server_service.py  node_handler_service.py  worker.py
docs/: 2  PIPY_README.md  about.md  authors.md  basics.md  conf.py  getting_started.md  getting_started.rst  index.md  index.rst  installation.md  requirements.txt  tutorials.md
docs/api/: index.rst  pipeline.rst
docs/api-docs/: README.md  analyzer.md  collector.md  data_sample.md  data_source.md  data_stream.md  old.old_pages  process.md  session.md  tabular.md  tabular.tabular_data_stream.md  video.md  video.processes.md  video.video_data_stream.md  visualization.md
docs/developer/: actors.rst  changelog.rst  communication.rst  docker.rst  docs.rst  index.rst  utils.rst
docs/framework/: chimeradash.md  dag.rst  detail_design.rst  edge_computing.rst  group_runner_overview.md  index.rst  network_typology.rst  single_runner_overview.md  time_sync.md
docs/plantuml/: architecture.puml  example.puml
docs/source/: chimerapy.app.pylib.rst  chimerapy.app.rst  chimerapy.core.rst  chimerapy.core.tabular.rst  chimerapy.utils.rst
docs/usage/: basics.md  basics.rst  debugging_nodes.rst  defining_pipeline.md  defining_pipeline.rst  dependencies.rst  index.rst  intro_tutorial.md  intro_tutorial.rst
examples/: async_remote_camera.py  remote_camera.py  remote_screen_and_web.py  remote_simple.py  remote_video_streams.py
mm/: __init__.py  analyzer.py  collector.py  data_sample.py  data_source.py  data_stream.py  process.py  session.py  visualization.py
mm/logs/: __init__.py  log_data_stream.py
mm/tabular/: __init__.py  tabular_data_stream.py
mm/video/: __init__.py  processes.py  video_data_stream.py
pymmdt/: __init__.py  analyzer.py  base_process.py  collector.py  data_sample.py  data_stream.py  director.py  entry.py  loader.py  logger.py  pipe.py  process.py  runner.py  session.py  sorter.py  tools.py  worker.py
pymmdt/app/: main.py  (+2 more)
scripts/: before_git.sh  convert_puml_to_png.py
test/: conftest.py  test_async_loop_thread.py  test_async_timer.py  test_client_server.py  test_code_delivery.py  test_connectivity.py  test_data_chunk.py  test_docker.py  test_entrypoint.py  test_error_handling.py  test_eventbus.py  test_logging.py  test_manager.py  test_node.py  test_node_interactions.py  test_p2p_networking.py  test_pipeline.py  test_registered_methods.py  test_states.py  test_threaded_async.py  test_use_cases.py  test_worker.py  test_worker_node_interactions.py  utils.py
tests/: data.dvc  profiler.py  profiler.sh  test_analyzer.py  test_collector.py  test_datastream.py  test_doubles.py  test_examples.py  test_integration.py  test_nurse_use_case.py  test_process.py  test_runner.py  test_session.py  test_tobii.py  tools.py
(+402 files in other folders)
