# More information for packaging and distributing project can be found
# here: https://packaging.python.org/tutorials/packaging-projects/
[metadata]
name = pymmdt
version = 0.0.1
author = Eduardo Davalos
author_email = eduardo.davalos.anaya@vanderbilt.edu
url = https://github.com/edavalosanaya/PyMMDT
description = PyMMDT: Python MultiModal Data Analytics and Visualization Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GENERAL Public License
platform = any
keywords = multimodal, data, analysis, time-series, visualization
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/edavalosanaya/PyMMDT/issues
    Changelog = https://github.com/edavalosanaya/PyMMDT/blob/master/CHANGELOG.md

[options]
# Make sure to use find: to include subpackages!
packages = find:
include_package_data = true
python_requires = >= 3.5
test_suite = tests
scripts = 
    scripts/convert_puml_to_png.py
setup_requires = 
    setuptools
install_requires = 
    # networkx >= 2.6.3
    # numpy >= 1.21.1
    # pandas >= 1.3.4
    # pydot >= 1.4.2
    # opencv-python >= 4.5.3.56
    # tqdm >= 4.62.3
    networkx >= 2.0.0
    numpy >= 1.15.0
    pandas >= 0.20.0
    # pydot >= 1.3.0
    opencv-python >= 3.3.0.10
    tqdm >= 4.18.0

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError
    # raise MemoryError
    # if __name__ == .__main__.:
    # if typing.TYPE_CHECKING:

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
# Google conventions
ignore = D200, D203, D213, D406, D407   
    
[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
