# More information for packaging and distributing project can be found
# here: https://packaging.python.org/tutorials/packaging-projects/
[metadata]
name = chimerapy
version = 0.0.4
url = https://github.com/oele-isis-vanderbilt/ChimeraPy
description = ChimeraPy: Python Distributed MultiModal Data Framework
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GENERAL Public License
platform = any
keywords = multimodal, data, distributed, streaming, real-time
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/oele-isis-vanderbilt/ChimeraPy/issues
    #Changelog = https://github.com/oele-isis-vanderbilt/ChimeraPy/blob/master/CHANGELOG.md

[options]
# Make sure to use find: to include subpackages!
packages = find:
include_package_data = true
python_requires = >= 3.6
test_suite = tests
setup_requires =
    setuptools
install_requires =
    networkx >= 2.6.2
    lz4
    dill
    netifaces
    matplotlib
    multiprocess
    opencv-python
    ffmpeg-python
    pyaudio
    pandas

[options.extras_require]
test =
    pytest
    pytest-repeat
    pytest-lazy-fixture
    pytest-dependency
    pytest-order
    coveralls
    pre-commit
    docker
    opencv-python
    numpy
    imutils
    mss

[options.package_data]
* = *.png, *.jpg, *.qml

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError
    # raise MemoryError
    # if __name__ == .__main__.:
    # if typing.TYPE_CHECKING:

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
# Google conventions
ignore = D200, D203, D213, D406, D407

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true

[options.entry_points]
console_scripts =
    cp-worker = chimerapy.entry.worker:main
